Improve readability of failure analyzer error message